<resources>
    <string name="app_name">ReUnion</string>
    <string name="menu_people">People</string>
    <string name="missingLastMessageReplacerText">Write something to start a conversation!</string>
    <string name="sendMessageButtonDescription">Send Message Button</string>
    <string name="loginEmailHint">Email</string>
    <string name="loginPasswordHint">Password</string>
    <string name="loginButtonText">Log In</string>
    <string name="logoImageDescription">ReUnion logo</string>
    <string name="conversationActivityLabel">Conversations</string>
    <string name="usersActivityLabel">People</string>
    <string name="loginActivityEmptyEmailError">Email can\'t be empty</string>
    <string name="loginActivityNotValidEmailError">Invalid Email</string>
    <string name="loginActivityEmptyPasswordError">Password can\'t be Empty</string>
    <string name="loginActivityNotValidPasswordError">Must be 6 characters or more</string>
    <string name="noInternetConnectionError">Check internet connection!</string>
    <string name="loginActivityBadCredentialsError">Bad credentials!</string>
    <string name="messagingEditTextHint">Start typing…</string>
    <string name="coloredCircleImageViewDescription">Colored circle to identify the user</string>
    <string name="meIsMessageSender">You:</string>
    <string name="userIsMessageSenderHeader">Chat with</string>
    <string name="conversationActivityEmptyListError">Come on!\nYou haven\'t texted anyone yet!\nThere are some cool guys here !</string>
    <string name="userActivityMeName">Awesome You</string>
    <string name="itemMessageMessageSentTick">Message sent tick</string>
    <string name="activityLoginRegisterInvitation">Don\'t have account yet?</string>
    <string name="signUpButtonText">Sign Up</string>
    <string name="loginFirstNameHint">First name</string>
    <string name="loginLastNameHint">Last name</string>
    <string name="signUpActivityEmptyNameError">First and Last Name can\'t be empty</string>
    <string name="signUpActivityTooShortNameError">First and Last name must be at least 3 letters</string>
    <string name="AtoZ">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="signUpActivityHaveSpaceNameError">First an Last Names can\'t have spaces</string>
    <string name="ErrorWhileTryingToSignUp">Couldn\'t signUp, please try agine later.</string>
</resources>
