<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingEnd="@dimen/activityLoginLayoutPadding"
    android:paddingStart="@dimen/activityLoginLayoutPadding"
    tools:context=".activity.SignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activitySignUpLogoBottomMargin"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:contentDescription="@string/logoImageDescription"
        android:src="@drawable/logo" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activitySignUpEmailEditTextBottomMargin"
        android:theme="@style/loginWidgetEditTextStyle"
        app:hintEnabled="false">
        <EditText
            android:id="@+id/emailEdit"
            style="@style/loginEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginEmailHint"
            android:inputType="textEmailAddress"
            android:maxLength="60"
            android:maxLines="1"
            tools:text="crazy_boy34" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activitySignUpEmailEditTextBottomMargin"
        android:theme="@style/loginWidgetEditTextStyle"
        app:hintEnabled="false">
        <EditText
            android:id="@+id/passwordEdit"
            style="@style/loginEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginPasswordHint"
            android:inputType="textPassword"
            android:maxLength="24"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activitySignUpEmailEditTextBottomMargin"
        android:theme="@style/loginWidgetEditTextStyle"
        app:hintEnabled="false">
        <EditText
            android:id="@+id/firstNameEdit"
            style="@style/loginEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginFirstNameHint"
            android:inputType="textPersonName"
            android:digits="@string/AtoZ"
            android:maxLength="24"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activitySignUpEmailEditTextBottomMargin"
        android:theme="@style/loginWidgetEditTextStyle"
        app:hintEnabled="false">
        <EditText
            android:id="@+id/lastNameEdit"
            style="@style/loginEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginLastNameHint"
            android:inputType="textPersonName"
            android:digits="@string/AtoZ"
            android:maxLength="24"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/signUpButton"
        style="@style/loginButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUpButtonText" />
</LinearLayout>